Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-6978

Bad results with join comparing case insensitive VARCHAR/ENUM/SET expression to a _bin ENUM column

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.2.29, 10.1.44, 10.3.22, 10.4.12, 10.5.1
    • 10.0.15
    • Optimizer
    • None

    Description

      DROP TABLE IF EXISTS t1,t2;
      CREATE TABLE t1 (a ENUM('a') CHARACTER SET latin1 PRIMARY KEY);
      INSERT INTO t1 VALUES ('a');
      DROP TABLE IF EXISTS t2;
      CREATE TABLE t2 (a ENUM('a','A') CHARACTER SET latin1 COLLATE latin1_bin);
      INSERT INTO t2 VALUES ('a'),('A');
      SELECT t1.* FROM t1 JOIN t2 ON t1.a COLLATE latin1_swedish_ci=t2.a;
      SELECT t1.* FROM t1 LEFT JOIN t2 ON t1.a COLLATE latin1_swedish_ci=t2.a;

      This script correctly returns 2 rows for the both SELECT queries.

      +---+
      | a |
      +---+
      | a |
      | a |
      +---+
      2 rows in set (0.00 sec)

      If I now add a primary key on t2 and rerun the queries again:

      ALTER TABLE t2 ADD PRIMARY KEY(a);
      SELECT t1.* FROM t1 JOIN t2 ON t1.a COLLATE latin1_swedish_ci=t2.a;
      SELECT t1.* FROM t1 LEFT JOIN t2 ON t1.a COLLATE latin1_swedish_ci=t2.a;

      both queries return only one rows:

      +---+
      | a |
      +---+
      | a |
      +---+
      1 row in set (0.00 sec)

      This is wrong. Two rows should always be returned.

      The same problem is repeatable if I change data type for t1.a from ENUM to VARCHAR(10) or SET('a').

      Attachments

        Issue Links

          Activity

            People

              bar Alexander Barkov
              bar Alexander Barkov
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1.5h
                  1.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.